--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -1,4 +1,3 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -26,22 +25,26 @@
     <div class="container-fluid justify-content-center">
       <div class="d-flex flex-wrap align-items-center gap-2">
         
-        <form action="/pagos" method="get">
-          <button class="btn btn-outline-primary">Pagos</button>
+        <form action="/" method="get">
+          <button class="btn btn-outline-primary">Inicio</button>
         </form>
-        
-        <form action="/productos_html" method="get">
+
+        <form action="/productos" method="get">
           <button class="btn btn-outline-primary">Productos</button>
         </form>
-        
+
+        <form action="/carrito" method="get">
+          <button class="btn btn-outline-primary">Carrito</button>
+        </form>
+
+        <form action="/contacto" method="get">
+          <button class="btn btn-outline-primary">Contacto</button>
+        </form>
+
         <form action="/register" method="get">
           <button class="btn btn-outline-primary">Registro</button>
         </form>
-        
-        <form action="/ventas" method="get">
-          <button class="btn btn-outline-primary">Ventas</button>
-        </form>
-        
+
         <form action="/login" method="get">
           <button class="btn btn-outline-primary">Iniciar Sesión</button>
         </form>
