--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -61,7 +61,7 @@
       </form>
 
       <div class="text-center mt-3">
-        <small>¿Ya tienes cuenta? <a href="/login" class="text-decoration-none">Inicia sesión aquí</a></small>
+        <small>¿Ya tienes cuenta? <a href="/auth/login" class="text-decoration-none">Inicia sesión aquí</a></small>
       </div>
     </div>
   </div>
